macOS crash reporter hits debug assertion with updated toolchain
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox138 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file, 1 obsolete file)
Part of the issue is that I don't know which of the asserts are we hitting because line number info seems wrong:
toolkit/crashreporter/breakpad-client/mac/handler/minidump_generator.cc:0
I guess it could be either:
- https://searchfox.org/mozilla-central/rev/b22ec3f983078ff98b04cee7dafe4b90342a42bf/toolkit/crashreporter/breakpad-client/mac/handler/minidump_generator.cc#531
- https://searchfox.org/mozilla-central/rev/b22ec3f983078ff98b04cee7dafe4b90342a42bf/toolkit/crashreporter/breakpad-client/mac/handler/minidump_generator.cc#1447-1457
Or maybe something else?
Gabriele, do you know how to best approach this?
Assignee | ||
Comment 1•26 days ago
|
||
I can try to repro locally later today (no access to a macOS machine right now)
Assignee | ||
Comment 2•26 days ago
|
||
I don't see anything too related in https://chromium.googlesource.com/breakpad/breakpad/+log either.
Assignee | ||
Comment 3•26 days ago
|
||
Seems like any test like browser/base/content/test/tabcrashed/browser_aboutRestartRequired_basic.js would hit this: https://treeherder.mozilla.org/logviewer?job_id=501046406&repo=try&lineNumber=4906
Assignee | ||
Comment 4•25 days ago
|
||
This unblocks the macOS SDK update.
Updated•25 days ago
|
Assignee | ||
Comment 5•25 days ago
|
||
Actually that seems to help, but causes others: https://treeherder.mozilla.org/jobs?repo=try&revision=1f109fde85aa287afefad8eb21426e9f0a5cb01e&selectedTaskRun=VHLkTHVAQvCKTIYqAu7NZA.0
Updated•25 days ago
|
Assignee | ||
Updated•25 days ago
|
Assignee | ||
Comment 6•25 days ago
|
||
On debug builds with newer libc++, std::vector has bounds checks which
call abort() if you do something like this.
Comment 8•25 days ago
|
||
bugherder |
Description
•