Bug 1956541 - Use std::vector::data() rather than a potentially OOB access. r=afranchuk

On debug builds with newer libc++, std::vector has bounds checks which
call abort() if you do something like this.

Differential Revision: https://phabricator.services.mozilla.com/D243178